# nanometers

./: .gitignore  Cargo.toml  README.md  check.sh  eframe_template-33b03ed54d8f0dd5.js  eframe_template-33b03ed54d8f0dd5_bg.wasm  index.html  rust-toolchain
.cargo/: config.toml
.github/workflows/: rust.yml
src/: app.rs  audio.rs  frame.rs  gui.rs  lib.rs  main.rs  setting.rs  settings.rs  utils.rs
src/audio/: audio_source.rs  callback.rs  mod.rs  plugin_client.rs  system_capture.rs  system_input.rs
src/frame/: gpu_test.rs  main_canvas.rs  main_frame.rs  meters.rs  oscilloscope_frame.rs  oscilloscope_meter.rs  peak_frame.rs  peak_meter.rs  resize.rs  setting_frame.rs  setting_panel.rs  spectrogram_meter.rs  spectrum_meter.rs  stereogram_frame.rs  vectorscope_meter.rs  waveform_frame.rs  waveform_meter.rs
src/setting/: audio_device.rs  audio_source.rs  meter.rs  module.rs  oscilloscope.rs  peak.rs  spectrogram.rs  spectrum.rs  stereogram.rs  theme.rs  vectorscope.rs  waveform.rs
src/utils/: calc_check.rs  color.rs  data_struct.rs  db.rs  frame_history.rs  hann.rs  iirfilter.rs  irrfilter.rs  rect_alloc.rs  ringbuffer.rs  windows.rs
