[package]
name = "nanometers"
version = "0.1.0"
authors = ["aizcutei <aiz.cutei@gmail.com>"]
edition = "2021"
rust-version = "1.76"


[dependencies]
egui = "0.27.2"
eframe = { version = "0.27.2", default-features = false, features = [
    "default_fonts", 
    "wgpu",
    "persistence",
] }
serde = { version = "1", features = ["derive"] }
cpal = {version = "0.15.3", exclude = ["js-sys"]}
interprocess = "1.2.1"
env_logger = { version = "0.11", default-features = false, features = [
    "auto-color",
    "humantime",
] }
anyhow = "1.0"
rustfft = "6.2.0"
ruhear = "0.1.0"
log = "0.4"

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2


[patch.crates-io]

# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/crates/egui" }
# eframe = { path = "../egui/crates/eframe" }
