[package]
name = "nanometers"
version = "0.1.0"
authors = ["aizcutei <aiz.cutei@gmail.com>"]
edition = "2021"
rust-version = "1.79"


[dependencies]
egui = { version = "0.27.2", features = ["rayon"] }
eframe = { version = "0.27.2", default-features = false, features = [
    "default_fonts",
    "wgpu",
    "persistence",
    "puffin",
] }
serde = { version = "1", features = ["derive"] }
interprocess = "1.2.1"
env_logger = { version = "0.11", default-features = false, features = [
    "auto-color",
    "humantime",
] }
cpal = { version = "0.15.3", exclude = ["js-sys"] }
anyhow = "1.0"
rustfft = "6.2.0"
realfft = "3.3.0"
ruhear = { git = "https://github.com/aizcutei/ruhear" }
# log = "0.4"
# rayon = "1.10"
# crossbeam-channel = "0.5.12"
puffin = { version = "0.19", optional = true }
puffin_http = { version = "0.16", optional = true }
piet-common = "0.6.2"


[features]
default = ["eframe/wgpu"]
glow = ["eframe/glow"]
puffin = ["eframe/puffin", "dep:puffin", "dep:puffin_http"]


[profile.release]
opt-level = 3
strip = true
lto = true

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2


[patch.crates-io]
